# xsimd-algorithm

./: CMakeLists.txt  xsimd-algorithm.pc.in  xsimd-algorithmConfig.cmake.in
include/xsimd-algorithm/: xreduce.hpp  xsimd-algorithm.hpp  xtransform.hpp  xversion.hpp
test/: CMakeLists.txt  test_transform.cpp
